--- a/collapse.html
+++ b/collapse.html
@@ -9,19 +9,21 @@
 	<div class="wrapper">
 		<ul class="list">
 			<li class="list-top"></li>
-			<li class="select">
-				<a href="#"></a>		
-			</li>
-			<li class="add">
+			<li class="share">
 				<a href="#"></a>
 			</li>
 			<li class="edit">
 				<a href="#"></a>
 			</li>
-			<li class="share">
+			<li class="add">
 				<a href="#"></a>
+			</li>
+			<li class="select">
+				<a href="#"></a>		
 			</li>
 		</ul>	
 	</div>
+	<script type="text/javascript" src="collapsable.js"></script>
+	<script type="text/javascript" src="jquery-1.8.2.js"></script>
 </body>
 </html>
