function realized，but the effect isn't good
mouseenter the list, it collapses and mouseleave the list, it will
expand.

--- a/collapse.html
+++ b/collapse.html
@@ -9,21 +9,21 @@
 	<div class="wrapper">
 		<ul class="list">
 			<li class="list-top"></li>
-			<li class="share">
-				<a href="#"></a>
+			<li class="share item">
+				<a href="#"><img alt="share" title="share" src="images/share.png"></a>
 			</li>
-			<li class="edit">
-				<a href="#"></a>
+			<li class="edit item">
+				<a href="#"><img alt="edit" title="edit" src="images/edit.png"></a>
 			</li>
-			<li class="add">
-				<a href="#"></a>
+			<li class="add item">
+				<a href="#"><img alt="add" title="add" src="images/add.png"></a>
 			</li>
-			<li class="select">
-				<a href="#"></a>		
+			<li class="select item">
+				<a href="#"><img alt="select" title="select" src="images/select.png"></a>		
 			</li>
 		</ul>	
 	</div>
-	<script type="text/javascript" src="collapsable.js"></script>
 	<script type="text/javascript" src="jquery-1.8.2.js"></script>
+	<script type="text/javascript" src="collapsable.js"></script>
 </body>
 </html>
